# nodeblock-testing

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
.stubs/CPAC/anat_preproc/: anat_preproc.pyi
.stubs/CPAC/pipeline/: cpac_pipeline.pyi  engine.pyi  nipype_pipeline_engine.pyi  nodeblock.pyi
.stubs/CPAC/utils/: configuration.pyi  test_init.pyi
.stubs/nipype/interfaces/: base.pyi
.stubs/nipype/pipeline/engine/: __init__.pyi  base.pyi
.stubs/traits/: api.pyi
src/cpac_nodeblock_testing/: __init__.py
src/cpac_nodeblock_testing/data/: __init__.py
src/cpac_nodeblock_testing/resource_pools/: __init__.py  anat_preproc.py  registration.py  resource_pool_pool.py  utils.py
src/tests/: anat_preproc.py
tests/: anat_preproc.py  test_anat_preproc.py
