[tool.poetry]
name = "C-PAC_nodeblock_testing"
version = "0.1.0"
description = "Tests for C-PAC nodeblocks."
authors = ["Jon Clucas <jon.clucas@childmind.org>", "Elizabeth Kenneally <113037677+e-kenneally@users.noreply.github.com>", "Steve Giavasis <steven.giavasis@childmind.org>"]
license = "LGPL-3"
readme = "README.md"
packages = [{include = "cpac_nodeblock_testing", from = "src"}]

[tool.poetry.dependencies]
CPAC = [
  {git = "https://github.com/FCP-INDI/C-PAC.git", branch = "develop"},
  {version = ">=1.8.7"}
]
numpy = "1.26.4"
python = ">=3.10,<3.11"
mypy = {version = "^1.10.0", optional = true}
pre_commit = {version = "^3.7.0", optional = true}
pytest = {version = "^8.2.0", optional = true}
pytest_cov = {version = "^5.0.0", optional = true}
ruff = {version = "^0.4.2", optional = true}

[tool.poetry.extras]
dev = ["mypy", "pre-commit", "pytest", "pytest-cov", "ruff"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.coverage.xml]
output = "coverage.xml"

[tool.pytest.ini_options]
addopts = "--doctest-modules --junitxml=pytest.xml"
pythonpath = [
  "src"
]
testpaths = [
  "src",
  "tests"
]

[tool.mypy]
mypy_path = ".stubs"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv"
]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = [
  "ANN101",  # self should not be annotated.
  "ANN102",  # cls should not be annotated.
  "ANN204"
]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["cpac_nodeblock_testing"]
no-lines-before = ["collab", "other-first-party", "local-folder"]
order-by-type = false
section-order = ["future", "standard-library", "third-party", "collab", "other-first-party", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
"collab" = ["nipype"]
"other-first-party" = ["CPAC"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[build-system]
requires = ["poetry-core>=1.2.0", "numpy"]
build-backend = "poetry.core.masonry.api"
